# projeto-fastapi-satc

./: 404.html  Dockerfile  README.md  cria_image_from_dockerfile.sh  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: mail.yml
app/: Dockerfile  main.py  models.py
app/api/v1/: routes.py
docs/: api.md  index.md
search/: search_index.json
site/: index.html
site/api/: index.html
